--- a/react-context-hook/task-manager/public/index.html
+++ b/react-context-hook/task-manager/public/index.html
@@ -15,7 +15,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://www.youtube.com/redirect?stzid=UgwlIvL63Q8oFpVq3fN4AaABAg&q=https%3A%2F%2Fcdnjs.cloudflare.com%2Fajax%2Flibs%2Ffont-awesome%2F5.13.1%2Fcss%2Fall.min.css&event=comments&redir_token=QUFFLUhqbDZNQkxhTzRObDZ0clRkTFFFQ0RSZlp4Rl9Td3xBQ3Jtc0ttd3ByMDNLclZxT3dMc1F4RzJQa2xEZkhKcFhuSGVaaGxHZWZmeUtnMzBreW90ZjIzU1Bpd0NtVXIzcnJQbHIyS19zRnBjaG9tNkhqcHh6MnVzWDhOWXlEUW9LYWxNVHI5SExxbVR2U2V6bG9CTVl5TQ%3D%3D"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <title>Reaction Application</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
